# CSV_DC_ENV

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py  test_remote.py  test_result.py
server/: __init__.py  app.py  csv_cleaning_environment.py  tasks.py
